Send share reminder + update license
